# bedrock

./: .gitignore  .gitmodules  CMakeLists.txt  IDEAS.MD  MANUAL.md  REQUIREMENTS.md  library.h  main.cpp  vcpkg.json
docs/: Bedrock.vsdx
include/bedrock/: bedrock.h  event.h  layers.h  messaging.h  serialization.h  types.h
src/: bedrock.cpp  layers.cpp
src/enet/: callbacks.c  compress.c  host.c  list.c  packet.c  peer.c  protocol.c  win32.c
tests/: CMakeLists.txt  ClientTests.cpp  ServerTests.cpp  behavior_registry.h  behaviors.h  client_tests.cpp  ipc.h  messaging_tests.cpp  serializers.h  server_tests.cpp  synchronization.h  test1.cpp  test2.cpp  test_main.cpp  testingTypes.h
tests/tests/: v1_0_tests.h
tests/tests/v1_0/: client_server_messaging.h  connectivity.h  events.h  initialization_and_shutdown.h  messaging.h
tests/utilities/: behaviors.h  includes.h  ipc.h  msg_types_and_callbacks.h  network_topologies.h  synchronization.h  testingTypes.h
